fix: logo not showing in background

--- a/src/plugins/rootview/styles/background.scss
+++ b/src/plugins/rootview/styles/background.scss
@@ -65,13 +65,15 @@ converse-bg {
             font-size: 6em;
             @include make-col(10);
         }
+        converse-logo {
+            height: 2em;
+            display: flex;
+            margin-top: 0.4em;
+        }
         padding: 0;
         padding-top: 15%;
         display: flex;
         justify-content: center;
         margin: auto;
-        svg {
-            margin-top: 0.4em;
-        }
     }
 }
